GNOME Bugzilla – Bug 690940
avdec_aac: produces garbled output (regression in master)
Last modified: 2013-01-26 12:54:59 UTC
http://www.fileplanet.com/224116/download/The-Hobbit:-An-Unexpected-Journey-HD-Trailer-720p avdec_aac produces lots of noise and when trying hard you can understand the real audio behind the noise
*** Bug 691665 has been marked as a duplicate of this bug. ***
PS: work-around - install the faad plugin from -bad.
commit c5980dc52ac57cf0147ed269e3b2c863d7251f84 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk> Date: Tue Jan 22 12:53:48 2013 +0000 avdec_aac: disable for autoplugging until it gets fixed Currently outputs garbled audio. Use faad in the meantime. https://bugzilla.gnome.org/show_bug.cgi?id=690940
Something I just notice, in 1.0 branch, avdec_aac can output both F32LE and S16LE, but in master it only outputs F32LE. And in fact, my test stream ouputs as S16LE with both faad and avdec_aac (1.0).
Ok, from now on, it seems that libav only generate planar F32LE. It seems like a bug with planar audio support.
Created attachment 234441 [details] [review] avauddec: Calculate buffer size base on nb_samples The buffer size was calculated base on linesize, but buffer may be larger then required.
Cool, thanks! Needed fixing for the mono case as well: commit b7ef1faab7c3db4a156e50fb6368c6efa49c630f Author: Tim-Philipp Müller <tim.muller@collabora.co.uk> Date: Sat Jan 26 12:35:10 2013 +0000 Revert "avdec_aac: disable for autoplugging until it gets fixed" This reverts commit c5980dc52ac57cf0147ed269e3b2c863d7251f84. It's fixed now. https://bugzilla.gnome.org/show_bug.cgi?id=690940 commit 879cd02e26427637edaa5e31f2cfa29be481c140 Author: Tim-Philipp Müller <tim@centricular.net> Date: Sat Jan 26 12:50:49 2013 +0000 avauddec: fix decoding of mono audio as well https://bugzilla.gnome.org/show_bug.cgi?id=690940 commit 76423a4ba7feccdd72937447997ca872c3bd094b Author: Nicolas Dufresne <nicolas.dufresne@collabora.com> Date: Fri Jan 25 14:40:15 2013 -0500 avauddec: fix garbled audio decoding in some cases Calculate output buffer size based on the number of samples, channels and bytes per sample. The buffer size was calculated based on linesize, which may be larger than what's required. https://bugzilla.gnome.org/show_bug.cgi?id=690940