avdec_aac: disable for autoplugging until it gets fixed

Currently outputs garbled audio. Use faad in the meantime.

https://bugzilla.gnome.org/show_bug.cgi?id=690940